refactor: melhora robustez dos testes de queue e stack